--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -14,18 +14,6 @@
      limitations under the License.
 -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/read_aloud"
-        android:title="@string/read_aloud"
-        android:icon="@drawable/ic_read_aloud">
-        </item>
-    <item
-        android:id="@+id/restart"
-        android:title="@string/restart"
-        android:icon="@drawable/ic_sync_50"/>
-    <item
-        android:id="@+id/stop"
-        android:title="@string/stop"
-        android:icon="@drawable/ic_stop"/>
-</menu>
+<resources>
+    <color name="black">#ff000000</color>
+</resources>
