--- a/res/layout/card_view.xml
+++ b/res/layout/card_view.xml
@@ -14,18 +14,19 @@
      limitations under the License.
 -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/read_aloud"
-        android:title="@string/read_aloud"
-        android:icon="@drawable/ic_read_aloud">
-        </item>
-    <item
-        android:id="@+id/restart"
-        android:title="@string/restart"
-        android:icon="@drawable/ic_sync_50"/>
-    <item
-        android:id="@+id/stop"
-        android:title="@string/stop"
-        android:icon="@drawable/ic_stop"/>
-</menu>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/black" >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal" >
+        <TextView
+            android:id="@+id/acceleration"
+            style="@style/ViewComponent" />
+        
+    </LinearLayout>
+</FrameLayout>
