--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,7 +15,16 @@
 -->
 
 <resources>
-
+    
+    <style name="ViewComponent">
+        <item name="android:layout_width">150px</item>
+        <item name="android:layout_height">150px</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">-17px</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">130px</item>
+    </style>
+    
     <style name="MenuTheme" parent="@android:style/Theme.DeviceDefault">
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:colorBackgroundCacheHint">@null</item>
