--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -16,19 +16,17 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <item
+    <item android:id="@+id/car_mode" android:title="@string/car_mode" android:icon="@drawable/ic_drive_50" /><item android:id="@+id/send_location" android:title="@string/send_location" android:icon="@drawable/ic_location_50" /><item
         android:id="@+id/record_video"
         android:title="@string/record_video"
         android:icon="@drawable/ic_camera_50"/>
     
-    <item
-        android:id="@+id/send_location"
-        android:title="@string/send_location"
-        android:icon="@drawable/ic_location_50"/>
+    
     
     <item
         android:id="@+id/stop"
         android:title="@string/stop"
         android:icon="@drawable/ic_stop"/>
+    
 
 </menu>
