--- a/res/layout/card_view.xml
+++ b/res/layout/card_view.xml
@@ -52,8 +52,13 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/CarMode"
+            android:id="@+id/addresss"
             android:layout_below="@+id/Zacceleration"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/CarMode"
+            android:layout_below="@+id/addresss"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
         
