--- a/res/layout/card_view.xml
+++ b/res/layout/card_view.xml
@@ -38,7 +38,20 @@
         >
         
         <TextView
+            android:id="@+id/addresss"
+            android:layout_alignParentTop="true"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        
+        <TextView
+            android:id="@+id/CarMode"
+            android:layout_below="@+id/addresss"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        
+        <TextView
             android:id="@+id/Xacceleration"
+            android:layout_below="@+id/CarMode"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
         <TextView
@@ -51,16 +64,7 @@
             android:layout_below="@+id/Yacceleration"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/addresss"
-            android:layout_below="@+id/Zacceleration"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/CarMode"
-            android:layout_below="@+id/addresss"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+        
         
         <!-- Put widgets for the right column inside this RelativeLayout. -->
 
