--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -16,13 +16,19 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <item android:id="@+id/demo_mode" android:title="@string/demo_mode" android:icon="@drawable/ic_gear_50" /><item android:id="@+id/send_location" android:title="@string/send_location" android:icon="@drawable/ic_location_50" /><item
+    <item 
+        android:id="@+id/demo_mode" 
+        android:title="@string/demo_mode" 
+        android:icon="@drawable/ic_gear_50" />
+    <item 
+        android:id="@+id/send_location" 
+        android:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        android:title="@string/send_location" 
+        android:icon="@drawable/ic_location_50" />
+    <item
         android:id="@+id/record_video"
         android:title="@string/record_video"
         android:icon="@drawable/ic_camera_50"/>
-    
-    
-    
     <item
         android:id="@+id/stop"
         android:title="@string/stop"
